update add form

--- a/course_page.html
+++ b/course_page.html
@@ -115,7 +115,7 @@
                 >
                 <input
                   type="text"
-                  name="courseId"
+                  name="courseCode"
                   placeholder="Nhập mã khoá học"
                   required
                 />
