--- a/course_page.html
+++ b/course_page.html
@@ -173,9 +173,9 @@
         </div>
 
         <!-- Form sửa khóa học -->
-        <!-- <div class="modal overlay">
+        <div class="modal overlay" id="editFormDiv">
           <div class="modal-content">
-            <p  class="bold">Cập nhật khoá học<span class="close">&times;</span></p>
+            <p  class="bold">Cập nhật khoá học<span class="span" id="editSpan">&times;</span></p>
             <form>
               <div class="add-form">
                 <label for="course-id"
@@ -236,16 +236,16 @@
               </div>
               <div class="submit-btn">
                 <button class="button" id="updateCourse">Cập nhật</button>
-                <button class="button" id="closeUpdate">Đóng</button>
+                <button class="button" id="closeEdit">Đóng</button>
               </div>
             </form>
           </div>
-        </div> -->
+        </div>
 
         <!-- Form xác nhận xóa -->
         <div class="modal overlay">
           <div class="modal-content">
-            <p class="bold">Xác nhận xóa khóa học<span class="close">&times;</span></p>
+            <p class="bold">Xác nhận xóa khóa học<span class="span" id="delSpan">&times;</span></p>
             <p>Bạn chắc chắn muốn xóa khóa học 1?</p>
             <div class="submit-btn">
               <button class="button" id="yesBtn">Có</button>
