--- a/account_page.html
+++ b/account_page.html
@@ -64,8 +64,7 @@
                 </label>
             </div>
 
-
-            <table class="course-table">
+            <table class="account-table">
                 <thead>
                     <tr>
                         <th>STT</th>
@@ -89,6 +88,31 @@
                 <a href="#">4</a>
                 <a href="#">Next</a>
             </div>
+
+            <!-- Modal khóa tài khoản -->
+            <div class="modal overlay">
+                <div class="modal-content">
+                  <p class="bold">Xác nhận khóa tài khoản<span class="span" id="lockSpan">&times;</span></p>
+                  <p>Bạn chắc chắn muốn khóa tài khoản ?</p>
+                  <div class="submit-btn">
+                    <button class="button" id="lockYes">Có</button>
+                    <button class="button" id="lockNo">Không</button>
+                  </div>
+                </div>
+              </div>
+
+            <!-- Modal mở khóa tài khoản -->
+            <div class="modal overlay">
+                <div class="modal-content">
+                  <p class="bold">Xác nhận mở khóa tài khoản<span class="span" id="unlockSpan">&times;</span></p>
+                  <p>Bạn chắc chắn muốn mở khóa tài khoản ?</p>
+                  <div class="submit-btn">
+                    <button class="button" id="unlockYes">Có</button>
+                    <button class="button" id="unlockNo">Không</button>
+                  </div>
+                </div>
+              </div>
+
         </div>
     </div>
 
