--- a/course_page.html
+++ b/course_page.html
@@ -172,7 +172,7 @@
           </div>
         </div>
 
-        <!-- Form sửa khóa học -->
+        <!-- Modal sửa khóa học -->
         <div class="modal overlay" id="editFormDiv">
           <div class="modal-content">
             <p  class="bold">Cập nhật khoá học<span class="span" id="editSpan">&times;</span></p>
@@ -242,7 +242,7 @@
           </div>
         </div>
 
-        <!-- Form xác nhận xóa -->
+        <!-- Modal xác nhận xóa -->
         <div class="modal overlay">
           <div class="modal-content">
             <p class="bold">Xác nhận xóa khóa học<span class="span" id="delSpan">&times;</span></p>
