--- a/student_page.html
+++ b/student_page.html
@@ -82,12 +82,9 @@
       </table>
 
       <div class="pagination">
-        <a href="#">Prev</a>
-        <a href="#" class="pag-active">1</a>
-        <a href="#">2</a>
-        <a href="#">3</a>
-        <a href="#">4</a>
-        <a href="#">Next</a>
+        <button id="prev">Prev</button>
+        <div id="page-info">1</div>
+        <button id="next">Next</button>
       </div>
     </div>
 
