--- a/account_page.html
+++ b/account_page.html
@@ -80,12 +80,9 @@
             </table>
 
             <div class="pagination">
-                <a href="#">Prev</a>
-                <a href="#" class="pag-active">1</a>
-                <a href="#">2</a>
-                <a href="#">3</a>
-                <a href="#">4</a>
-                <a href="#">Next</a>
+                <button id="prev">Prev</button>
+                <div id="page-info"></div>
+                <button id="next">Next</button>
             </div>
 
             <!-- Modal khóa tài khoản -->
