--- a/class_page.html
+++ b/class_page.html
@@ -96,10 +96,8 @@
           <tbody id="tbody"></tbody>
         </table>
 
-        <div class="pagination">
-          <button id="prev">Prev</button>
-          <div id="page-info"></div>
-          <button id="next">Next</button>
+        <div class="pagination" id="pagination">
+
         </div>
       </div>
 
