--- a/student_page.html
+++ b/student_page.html
@@ -81,10 +81,7 @@
         <tbody id="tbody"></tbody>
       </table>
 
-      <div class="pagination">
-        <button id="prev">Prev</button>
-        <div id="page-info">1</div>
-        <button id="next">Next</button>
+      <div class="pagination" id="pagination">
       </div>
     </div>
 
