--- a/account_page.html
+++ b/account_page.html
@@ -79,10 +79,7 @@
                 </tbody>
             </table>
 
-            <div class="pagination">
-                <button id="prev">Prev</button>
-                <div id="page-info"></div>
-                <button id="next">Next</button>
+            <div class="pagination" id="pagination">
             </div>
 
             <!-- Modal khóa tài khoản -->
