--- a/class_page.html
+++ b/class_page.html
@@ -132,7 +132,7 @@
             </div>
             <div class="add-form">
               <label for="class-teacher"
-                >Thời gian<span class="red-color">(*)</span></label
+                >Giáo viên<span class="red-color">(*)</span></label
               >
               <input
                 type="text"
@@ -144,7 +144,7 @@
             </div>
             <div class="add-form">
               <label for="class-number"
-                >Thời gian<span class="red-color">(*)</span></label
+                >Sỉ số<span class="red-color">(*)</span></label
               >
               <input
                 type="number"
