--- a/course_page.html
+++ b/course_page.html
@@ -126,7 +126,7 @@
           <form>
             <div class="add-form">
               <label>Mã khoá học<span class="red-color">(*)</span></label>
-              <input type="text" id="courseCode" name="courseCode" required />
+              <input type="text" id="courseCode" name="courseCode" required readonly/>
             </div>
             <div class="add-form">
               <label>Tên khoá học <span class="red-color">(*)</span></label>
