--- a/home_page.html
+++ b/home_page.html
@@ -54,7 +54,7 @@
                     <p>Thống kê khoá học</p>
                 </div>
                 <div class="statics-content">
-                    <p>Số khoá học: <span>5</span></p>
+                    <p>Số khoá học: <span id="courseNum"></span></p>
                 </div>
 
             </section>
@@ -64,10 +64,10 @@
                     <p>Thống kê lớp học</p>
                 </div>
                 <div class="statics-content">
-                    <p>Số lớp học: <span>20</span></p>
-                    <p>Số lớp đang hoạt động: <span>10</span></p>
-                    <p>Số lớp đã kết thúc: <span>4</span></p>
-                    <p>Số lớp đang chờ: <span>6</span></p>
+                    <p>Số lớp học: <span id="classNum"></span></p>
+                    <p>Số lớp đang hoạt động: <span id="activeClass"></span></p>
+                    <p>Số lớp đã kết thúc: <span id="finishedClass"></span></p>
+                    <p>Số lớp đang chờ: <span id="pendingClass"></span></p>
                 </div>
 
             </section>
@@ -77,7 +77,7 @@
                     <p>Thống kê sinh viên</p>
                 </div>
                 <div class="statics-content">
-                    <p>Tổng số SV: <span>1000</span></p>
+                    <p>Tổng số SV: <span id="studentNum"></span></p>
                     <p>Số SV chờ lớp: <span>200</span></p>
                     <p>Số SV đang học: <span>600</span></p>
                     <p>Số SV bảo lưu/đình chỉ: <span>50</span></p>
